<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.runus.runusandroid.ui.single_mode.SingleModeFragment">

    <TextView
        android:id="@+id/resultText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:fontFamily="@font/pretendardsemibold"
        android:gravity="center"
        android:text="러닝 결과"
        android:textSize="20sp"
        app:layout_constraintTop_toTopOf="parent"

        />

    <TextView
        android:id="@+id/textSingleMode"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:fontFamily="@font/pretendardregular"
        android:textAlignment="center"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineLeft"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="32dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineRight"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_end="32dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineCenter"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.5" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelinecl"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.4" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelinecr"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.6" />


    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineLeftBottom"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="24dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineRightBottom"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_end="24dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineCenterBottom"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.5" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineclBottom"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.35" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelinecrBottom"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.65" />


    <TextView
        android:id="@+id/goalDistanceStaticText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/pretendardregular"
        android:paddingTop="15dp"
        android:text="목표 거리"
        app:layout_constraintEnd_toStartOf="@id/guidelineCenter"
        app:layout_constraintStart_toStartOf="@id/guidelineLeft"
        app:layout_constraintTop_toBottomOf="@id/resultText" />

    <TextView
        android:id="@+id/goalDistanceText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/pretendardregular"
        android:paddingTop="2dp"
        android:paddingBottom="30dp"
        android:text="--"
        app:layout_constraintEnd_toStartOf="@id/guidelineCenter"
        app:layout_constraintStart_toStartOf="@id/guidelineLeft"
        app:layout_constraintTop_toBottomOf="@id/goalDistanceStaticText" />

    <TextView
        android:id="@+id/goalTimeStaticText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/pretendardregular"
        android:paddingTop="15dp"
        android:text="목표 시간"
        app:layout_constraintEnd_toStartOf="@id/guidelineRight"
        app:layout_constraintStart_toStartOf="@id/guidelineCenter"
        app:layout_constraintTop_toBottomOf="@id/resultText" />


    <TextView
        android:id="@+id/goalTimeText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/pretendardregular"
        android:paddingTop="2dp"
        android:paddingBottom="30dp"
        android:text="--"
        app:layout_constraintEnd_toStartOf="@id/guidelineRight"
        app:layout_constraintStart_toStartOf="@id/guidelineCenter"
        app:layout_constraintTop_toBottomOf="@id/goalTimeStaticText" />

    <fragment
        android:id="@+id/map_result"
        android:name="com.google.android.gms.maps.SupportMapFragment"
        android:layout_width="0dp"
        android:layout_height="300dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/goalDistanceText" />

    <LinearLayout
        android:id="@+id/currentDistance"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        app:layout_constraintEnd_toStartOf="@id/guidelineclBottom"
        app:layout_constraintStart_toStartOf="@id/guidelineLeftBottom"
        app:layout_constraintTop_toBottomOf="@id/map_result">

        <TextView
            android:id="@+id/currentDistanceStaticText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/pretendardregular"
            android:paddingTop="30dp"
            android:text="거리" />

        <TextView
            android:id="@+id/currentDistanceText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/pretendardregular"
            android:paddingTop="2dp"
            android:paddingBottom="30dp"
            android:text="0.0km"
            app:layout_constraintTop_toBottomOf="@id/currentDistanceStaticText" />
    </LinearLayout>


    <LinearLayout
        android:id="@+id/currentPace"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="@id/guidelinecrBottom"
        app:layout_constraintStart_toStartOf="@id/guidelineclBottom"
        app:layout_constraintTop_toBottomOf="@id/map_result">

        <TextView
            android:id="@+id/currentPaceStaticText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/pretendardregular"
            android:paddingTop="30dp"
            android:text="페이스" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/paceDetailButton"
            android:layout_width="120dp"
            android:layout_height="40dp"
            android:background="@drawable/detail_result_button"
            android:text="상세 기록"
            android:textColor="#4AA570" />
    </LinearLayout>


    <LinearLayout
        android:id="@+id/currentTime"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="@id/guidelineRightBottom"
        app:layout_constraintStart_toStartOf="@id/guidelinecrBottom"
        app:layout_constraintTop_toBottomOf="@id/map_result">

        <TextView
            android:id="@+id/currentTimeStaticText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/pretendardregular"
            android:paddingTop="30dp"
            android:text="시간" />

        <Chronometer
            android:id="@+id/currentTimeText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/pretendardregular"
            android:format="00:00:00"
            android:paddingTop="2dp"
            android:paddingBottom="15dp"
            android:text="00:00:00"
            app:layout_constraintTop_toBottomOf="@id/currentTimeStaticText" />
    </LinearLayout>


    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/quitButton"
        android:layout_width="130dp"
        android:layout_height="130dp"
        android:background="@drawable/result_quit_button"
        android:fontFamily="@font/pretendardregular"
        android:shape='oval'
        android:text="돌아가기"
        android:textColor="#000000"
        android:textSize="20dp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/guidelineRight"
        app:layout_constraintStart_toStartOf="@+id/guidelineLeft"
        app:layout_constraintTop_toBottomOf="@id/currentPace" />

    <Button
        android:id="@+id/hiddenButton"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:backgroundTint="#90FFFFFF"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>
