<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    
    <item
        android:id="@+id/navigation_single_mode"
        android:icon="@drawable/single_mode"
        android:title="@string/title_single_mode" />

    <item
        android:id="@+id/navigation_multi_mode"
        android:icon="@drawable/multi_mode"
...
    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/ic_home_black_24dp"
        android:title="@string/title_home" />

    <item
        android:id="@+id/navigation_history"
        android:icon="@drawable/ic_history"
        android:title="@string/title_history" />

    <item
        android:id="@+id/navigation_user_setting"
        android:icon="@drawable/ic_setting"
...
