...
            android:gravity="left"
            android:text="오늘의 목표"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:textSize="20dp"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@id/textViewTitle"
            app:layout_constraintEnd_toStartOf="@id/buttonClose"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageButton
            android:id="@+id/buttonClose"
            android:layout_width="wrap_content"
...
            app:layout_constraintStart_toStartOf="parent"

            app:layout_constraintTop_toBottomOf="@id/textViewGoalDistance" />


        <Button
            android:id="@+id/buttonConfirm"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:backgroundTint="#4AA570"
            android:text="설정 완료"
            android:textColor="@color/white"
...
